[package]
name = "non_repeating_strings"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.3", optional = true }
num-traits = { version = "0.2", features = ["i128"]}

[features]
default = []
bigint = ["num-bigint"]