[package]
name = "char_combinator"
version = "1.1.2"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

description = "An iterator to create all combination of a given char range"
license = "MIT OR Apache-2.0"
keywords = ["char", "combinator", "combinations", "strings"]
repository = "https://github.com/hardliner66/char_combinator"
readme = "README.md"

[dependencies]
num-traits = { version = "0.2", features = ["i128"] }
num-bigint = { version = "0.3", optional = true }
serde = { version = "1.0.118", optional = true, features = ["derive"] }

[features]
default = []
bigint = ["num-bigint"]
serialize = ["serde/derive"]
bigint_serialize = ["num-bigint/serde", "bigint", "serialize"]